--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -1,3 +1,19 @@
+@article{YLJRNR,
+  author    = "Yilu Liu and Lamine Mili and Jaime De La Ree and Reynaldo Francisco Nuqui and Reynaldo Francisco Nuqui",
+  title     = "State Estimation and Voltage Security Monitoring Using Synchronized Phasor Measurement",
+  year      = 2001
+}
+
+@article{CSMG,
+  author = "Carlene Stephens and Maggie Dennis",
+  title = "Engineering time: inventing the electronic wristwatch",
+  journal = "British Journal for the History of Science",
+  year = 2000,
+  volume = 33,
+  pages = "477-497",
+  url = {www.ieee-uffc.org/main/history/step.pdf}
+}
+
 @BOOK {KandR,
    AUTHOR  = "Kernighan, Brian W. and Ritchie, Dennis M.",
    TITLE   = "{The C Programming Language Second Edition}",
@@ -55,16 +71,6 @@
   title = {Trilateration Exercise},
   howpublished = {\url{http://www.gps.gov/multimedia/tutorials/trilateration/}},
   note = {Accessed: 21-04-2015}
-}
-
-@article{CSMG,
-  author = "Carlene Stephens and Maggie Dennis",
-  title = "Engineering time: inventing the electronic wristwatch",
-  journal = "British Journal for the History of Science",
-  year = 2000,
-  volume = 33,
-  pages = "477-497",
-  url = {www.ieee-uffc.org/main/history/step.pdf}
 }
 
 @misc{NATINT,
